--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #111827;
   --secondary-color: #1f2937;
+  --tertiary-color: #6b6c6d;
   --background-color: #030712;
   --text-color: white;
   --font-family: "Arial", sans-serif;
@@ -19,4 +20,29 @@ body {
   background-color: var(--background-color);
   height: 100vh;
   width: 100%;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  height: 100vh;
+}
+
+aside {
+  width: 300px;
+  height: 100%;
+}
+
+main {
+  width: 100%;
+  height: 100vh;
+}
+
+.page-title {
+  color: var(--text-color);
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 20px;
 }
