--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,6 +20,7 @@ body {
   background-color: var(--background-color);
   height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 
 .app-container {
@@ -38,6 +39,7 @@ aside {
 main {
   width: 100%;
   height: 100vh;
+  overflow-y: scroll;
 }
 
 .page-title {
@@ -45,4 +47,42 @@ main {
   font-size: 2rem;
   text-align: center;
   margin-top: 20px;
+}
+
+/* Animations */
+
+.sidebar-button {
+  opacity: 0;
+  animation: fade-in 0.5s ease-in-out forwards;
+}
+
+.card-widget {
+  animation: pop 0.5s ease-in-out forwards;
+  opacity: 0;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: translateX(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes pop {
+  0% {
+    transform: scale(1);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1.01);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
