--- a/frontend/src/Screens/CreatePost.css
+++ b/frontend/src/Screens/CreatePost.css
@@ -28,3 +28,19 @@
 .social-checkbox {
   margin: 10px;
 }
+
+.image-preview {
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 10px;
+}
+
+.post-image {
+  width: 100%;
+  height: 120px;
+  border-radius: 8px;
+  object-fit: cover;
+  max-height: 200px;
+  animation: fade-in 0.5s ease-in-out forwards;
+}
