--- a/frontend/src/Screens/CreatePost.css
+++ b/frontend/src/Screens/CreatePost.css
@@ -44,3 +44,17 @@
   max-height: 200px;
   animation: fade-in 0.5s ease-in-out forwards;
 }
+
+.account-name {
+  display: inline-block;
+  color: var(--text-color);
+  margin-left: 10px;
+  transform: translate(0px, -20px);
+}
+
+.interaction-icons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 10px;
+}
