--- a/frontend/src/components/Carousel.css
+++ b/frontend/src/components/Carousel.css
@@ -1,15 +1,24 @@
 .carousel-container {
   position: relative;
+  overflow: hidden;
   width: 100%;
-  height: 300px;
+  height: fit-content;
   margin-top: 10px;
 }
 
-.carousel-image {
+.carousel-track {
+  display: flex;
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  border-radius: 12px;
+  transition: transform 0.5s ease;
+}
+
+.carousel-image {
+  flex-shrink: 0;
+  width: 100%;
+  height: fit-content;
+  /* object-fit: cover; */
+  /* border-radius: 12px; */
 }
 
 .carousel-button {
@@ -48,6 +57,7 @@
   margin: 0 4px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
 }
 
 .carousel-indicator.active {
