--- a/frontend/src/Screens/LoginRegister.css
+++ b/frontend/src/Screens/LoginRegister.css
@@ -1,15 +1,15 @@
-.grid {
+/* .grid {
   width: 60%;
   min-width: 450px;
   max-width: 800px;
   margin: auto;
-}
+} */
 
-body {
+/* body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
 input[type="text"],
 input[type="password"] {
